--- a/docassemble/jamulus/data/questions/jamulus-fragen.yml
+++ b/docassemble/jamulus/data/questions/jamulus-fragen.yml
@@ -1,4 +1,15 @@
 ---
+id: jamulus-2021/frist
+field: Anmeldeschluss
+section: Ihre Anmeldung
+question: Anmeldefrist abgelaufen
+subquestion: |
+  Vielen Dank für Ihr Interesse am Workshop. Die Anmeldefrist ist leider abgelaufen und
+  eine Anmeldung ist nicht mehr möglich. Die Zugangsdaten erhalten Sie nach erfolgter
+  Zahlung kurz vor Beginn des Workshops.
+buttons:
+  - Fertig: exit
+---
 id: jamulus-2021/persoenliche-daten
 field: Kontaktdaten
 section: Persönliche Daten
