--- a/docassemble/jamulus/data/questions/instrumentalisten.yml
+++ b/docassemble/jamulus/data/questions/instrumentalisten.yml
@@ -20,7 +20,7 @@ metadata:
     <img src="https://www.lmr-hh.de/wp-content/uploads/2020/03/Landesmusikrat-Hamburg-Negativ.svg"
          height="27">
   description:
-    Von Instrumentalisten werden für den Jamulus-Workshop zusätzliche Informationen abgefragt.
+    Von Instrumentalisten\*innen werden für den Jamulus-Workshop zusätzliche Informationen abgefragt.
   exit url: https://www.lmr-hh.de/save-the-date-workshop-online-proben-mit-jamulus/
   revision_date: 2021-05-13
 ---
@@ -86,7 +86,7 @@ question: Zusätzliche Angaben zum Jamulus-Workshop
 subquestion: |
   Liebe Teilnehmenden am Jamulus-Workshop,
 
-  um den Praxisteil des Workshops für Instrumentalist\*innen so gut wie möglich auf die
+  um den Praxisteil des Workshops für Instrumentalisten\*innen so gut wie möglich auf die
   Bedürfnisse der Teilnehmenden abzustimmen, möchten wir Sie bitten, folgende Fragen zu
   beantworten.
 fields:
