--- a/docassemble/jamulus/data/questions/jamulus.yml
+++ b/docassemble/jamulus/data/questions/jamulus.yml
@@ -158,7 +158,8 @@ sections:
 # Funktion, die nicht leichtfertig verändert werden sollte.
 mandatory: True
 code: |
-  Anmeldeschluss
+  if not testmodus:
+    Anmeldeschluss
   Mitglied
   Kontaktdaten
   Optionen
