--- a/docassemble/lmrhh/data/questions/mud.yml
+++ b/docassemble/lmrhh/data/questions/mud.yml
@@ -2,22 +2,22 @@
 # Dieser Abschnitt sollte nicht verändert werden.
 include:
   - data.yml
-  - jamulus-fragen.yml
+  - mud-fragen.yml
 ---
 # Die Metadaten konfigurieren das Erscheinungsbild der Anmeldungen (z.B. den
 # Titel). Mögliche Felder sind hier dokumentiert:
 # https://docassemble.org/docs/initial.html#metadata
 metadata:
-  title: Anmeldung zum Jamulus-Workshop
-  tab title: Anmeldung Jamulus-Workshop
-  short title: Jamulus-Workshop
+  title: Anmeldung zum Musik und Demenz Fachtagung am 17.09.2021
+  tab title: Anmeldung Musik und Demenz
+  short title: Musik und Demenz
   logo:
     <img src="https://www.lmr-hh.de/wp-content/uploads/2020/03/Landesmusikrat-Hamburg-Negativ.svg"
          height="27">
   description:
-    Dies ist die Anmeldung zum Jamulus-Workshop im Mai 2021.
-  exit url: https://www.lmr-hh.de/save-the-date-workshop-online-proben-mit-jamulus/
-  revision_date: 2021-04-21
+    Dies ist die Anmeldung zur Fachtagung Musik und Demenz am 17.09.2021.
+  exit url: https://www.lmr-hh.de
+  revision_date: 2021-06-09
 ---
 # In diesem Abschnitt werden die Anmeldungen sowie die Automatisierung
 # konfiguriert. Die einzelnen Felder sind separat dokumentiert.
@@ -27,7 +27,7 @@ data:
   # archiviert werden. Stattdessen wird eine Zusammenfassung der Aktionen an die
   # angegebene E-Mail geschickt, in der steht, was bei ausgeschaltetem
   # Testmodus passiert wäre.
-  Testmodus: false
+  Testmodus: true
 
   # Speichert alle angegebenen Daten in der Tabelle mit dieser ID ab. Die
   # 'Tabelle' gibt die ID einer Google Docs Tabelle an, in der neue Anmeldungen
@@ -35,16 +35,13 @@ data:
   # in dem neue Anmeldungen eingefügt werden sollen.
 
   Anmeldungen:
-    Tabelle: 10bqlxBe6ZRVwgz7JoX2Qly1H4z5YX01idgxl1KutBSo
+    Tabelle: 15QZDpDvtnhmQLJx-S0OLgGjkTVuju-8i_q3OXHQpYu4
     Blatt-ID: 1223040774
     Bereich: Anmeldungen
 
   # Die hier angegebenen Personen erhalten automatisch eine Benachrichtigung,
   # wenn eine Anmeldung abgeschickt wird.
-  E-Mail Benachrichtigung:
-    - dejong@lmr-hh.de
-    - burmeister@lmr-hh.de
-    - henne@lmr-hh.de
+  E-Mail Benachrichtigung: []
 
   # Dieses Mailgun Template wird zum Verschicken von E-Mails benutzt. Es sollte
   # die Variable {{{ content }}} enthalten.
@@ -52,57 +49,18 @@ data:
 
   # ID des Google Drive Ordners, in dem Anmeldungen archiviert werden sollen.
   # Die ID kann aus der URL herausgelesen werden.
-  Archivordner-ID: 1FwPIdPZ1nrY_Xm-eGJhFX5g74YVwh4YZ
+  Archivordner-ID: 1E42DNmoBggmAJaNeoOjkq3S7tx567UPw
 ---
 code: |
-  beitrag = 10 if Mitglied else 35
----
-code: |
-  key = "jamulus_rechnungsnummer"
+  key = "mud_rechnungsnummer"
   if testmodus:
     key = key + "_test"
   with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 94, nx=True)
+    redis.set(key, 200, nx=True)
     redis.incr(key)
     rechnungsnummer = '2021' + str(redis.get(key).decode()).zfill(3)
     if testmodus:
       rechnungsnummer = rechnungsnummer + "-test"
----
-code: |
-  key = "jamulus_chor_rest"
-  if testmodus:
-    key = key + "_test"
-  with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 7, nx=True)
-    chor_rest = int(redis.get(key).decode())
-    redis.decr(key)
-  chor_rest_decr = True
----
-code: |
-  key = "jamulus_chor_rest"
-  if testmodus:
-    key = key + "_test"
-  with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 7, nx=True)
-    chor_rest = int(redis.get(key).decode())
----
-code: |
-  key = "jamulus_instrument_rest"
-  if testmodus:
-    key = key + "_test"
-  with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 19, nx=True)
-    instrument_rest_rest = int(redis.get(key).decode())
-    redis.decr(key)
-  instrument_rest_decr = True
----
-code: |
-  key = "jamulus_instrument_rest"
-  if testmodus:
-    key = key + "_test"
-  with redis.lock(key + "-lock", timeout=5):
-    redis.set(key, 19, nx=True)
-    instrument_rest = int(redis.get(key).decode())
 ---
 # Das Anmeldeformular als PDF. Hier können Dateiname und -inhalt gesetzt werden.
 # Der variable name sowie die valid formats sollten nicht verändert werden.
@@ -112,7 +70,7 @@ attachment:
   filename: Anmeldung ${ person.name }
   # Dies ist der Dateiname des Templates. Diese Datei muss sich im `templates`
   # Ordner befinden.
-  docx template file: Anmeldung Jamulus-Workshop.docx
+  docx template file: Anmeldung Fachtagung Musik und Demenz.docx
   # Die folgendne beiden Zeilen sollten nicht verändert werden
   variable name: anmeldeformular
   valid formats: [pdf]
@@ -128,16 +86,16 @@ attachment:
 # Wert von template sollte nicht verändert werden.
 template: person_email
 # Der E-Mail-Betreff
-subject: Ihre Anmeldung zum Jamulus-Workshop
+subject: Ihre Anmeldung zur Fachtagung Musik und Demenz
 # Diese Datei enthält den Mailinhalt (die Datei befindet sich im `templates`
 # Ordner).
-content file: Jamulus E-Mail.md
+content file: MuD E-Mail.md
 ---
 # Der Inhalt der E-Mail, die als Benachrichtigung bei neuen Anmeldungen
 # versendet wird. Der Wert von template sollte nicht verändert werden.
 template: orga_email
 # Der E-Mail-Betreff
-subject: ${ person.name } hat sich zum Jamulus-Workshop angemeldet
+subject: ${ person.name } hat sich zum MuD-Tagung angemeldet
 # Diese Datei enthält den Mailinhalt (die Datei befindet sich im `templates`
 # Ordner).
 content file: Benachrichtigung.md
@@ -154,16 +112,25 @@ sections:
   - Bedingungen
   - Ihre Anmeldung
 ---
+code: |
+  webinare = {
+    'Hohberger': 'hohberger',
+    'Richarz': 'richarz',
+    'Mayr': 'mayr',
+    'Zank-Belz': 'zankbelz',
+    'Keßler': 'kessler',
+    'Sommerer': 'sommerer',
+    'Klimpel': 'klimpel',
+    'Blauth': 'blauth',
+    'Stritzker': 'stritzker'
+  }
+---
 # Die Reihenfolge, in der Fragen gestellt werden. Dies ist eine erweiterte
 # Funktion, die nicht leichtfertig verändert werden sollte.
 mandatory: True
 code: |
-  if not testmodus:
-    Anmeldeschluss
-  Mitglied
   Kontaktdaten
   Optionen
-  Kapazitaet_Check
   Rechnungs_Info
   Teilnahmebedingungen
   Kontrolle
