--- a/docassemble/lmrhh/data/questions/tasks.yml
+++ b/docassemble/lmrhh/data/questions/tasks.yml
@@ -12,21 +12,17 @@ code: |
 # case-insensitive.
 code: |
   member_data = {
+    "Organisation": person.organisation,
+    "Tätigkeit": person.position,
     "Vorname": person.name.first,
     "Nachname": person.name.last,
     "E-Mail": person.email,
     "Telefonnummer": person.phone_number,
     "Adresse": adresse(person),
-    "Workshop-Option": Optionen,
-    "Mitglied": Mitglied,
     "Newsletter": bedingungen.newsletter,
     "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm'),
     "Rechnungsnummer": rechnungsnummer,
-    "Beitrag": beitrag,
-    "Warteliste": (Optionen == "Chor" and chor_rest <= 0) or (Optionen == "Instrument" and instrument_rest <= 0)
-  }
-  if Mitglied:
-    member_data["Organisation"] = person.organisation
+  }.extend({v: value(v) for (k,v) in webinare.items()})
 ---
 # A task that adds a row to the Anmeldungen.
 need: rechnungsnummer
