--- a/docassemble/lmrhh/data/questions/tasks.yml
+++ b/docassemble/lmrhh/data/questions/tasks.yml
@@ -22,7 +22,8 @@ code: |
     "Newsletter": bedingungen.newsletter,
     "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm'),
     "Rechnungsnummer": rechnungsnummer,
-  }.extend({v: value(v) for (k,v) in webinare.items()})
+  }
+  member_data.update({v: value(v) for (k,v) in webinare.items()})
 ---
 # A task that adds a row to the Anmeldungen.
 need: rechnungsnummer
