--- a/docassemble/lmrhh/data/questions/tasks.yml
+++ b/docassemble/lmrhh/data/questions/tasks.yml
@@ -22,6 +22,7 @@ code: |
     "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm'),
     "Rechnungsnummer": rechnungsnummer,
   }
+  member_data.update(webinare)
 ---
 # A task that adds a row to the Anmeldungen.
 need: rechnungsnummer
