Begin adding schedule

--- a/docassemble/lmrhh/data/questions/mud-fragen.yml
+++ b/docassemble/lmrhh/data/questions/mud-fragen.yml
@@ -70,6 +70,13 @@ subquestion: |
     Dr. phil. Lara Blauth, Musiktherapeutin Studienleiterin, HAW Würzburg|Schweinfurt
   - **Titel noch offen, musiktherapeutisches Thema**  
     Judith Stritzker, Musiktherapeutin B.A., SRH Hochschule Heidelberg
+  
+  Die Webinare werden in folgenden Zeitslots angeboten:
+  <table>
+  <tr><th>Zeitslot 1</th><td>Hohberger</td><td>Richarz</td></tr>
+  <tr><th>Zeitslot 2</th><td>Hohberger</td><td>Klimpel</td></tr>
+  <tr><th>Zeitslot 3</th><td>Stritzker</td><td>Klimpel</td></tr>
+  </table>
 
   Um besser einschätzen zu können, welche Webinare stärker ausgelastet sind, möchten wir Sie
   bitten, diejenigen Webinare auszuwählen, für die Sie sich besonders interessieren. Sie können
