--- a/docassemble/lmrhh/data/questions/mud-fragen.yml
+++ b/docassemble/lmrhh/data/questions/mud-fragen.yml
@@ -46,9 +46,9 @@ field: Optionen
 section: Webinar-Optionen
 question: Webinar-Optionen
 subquestion: |
-  Im zweiten Teil der Tagung werden verschiedene Webinare stattfinden. Sie werden
-  insgesamt an **3** der Angebote teilnehmen können.  Es gibt insgesamt 9 verschiedene
-  Webinare, aus denen Sie 3 auswählen können.
+  Im zweiten Teil der Tagung werden verschiedene Webinare stattfinden. Es gibt
+  insgesamt 9 verschiedene, aus denen Sie an insgesamt **3** Stück teilnehmen
+  können.  
   
   Die folgenden Webinare stehen zur Auswahl:
 
@@ -71,11 +71,16 @@ subquestion: |
   - **Titel noch offen, musiktherapeutisches Thema**  
     Judith Stritzker, Musiktherapeutin B.A., SRH Hochschule Heidelberg
   
-  Die Webinare werden in folgenden Zeitslots angeboten:
-  <table>
-  <tr><th>Zeitslot 1</th><td>Hohberger</td><td>Richarz</td></tr>
-  <tr><th>Zeitslot 2</th><td>Hohberger</td><td>Klimpel</td></tr>
-  <tr><th>Zeitslot 3</th><td>Stritzker</td><td>Klimpel</td></tr>
+  Die Webinare werden in folgenden Zeitslots angeboten. Alle Webinare werden insgesamt 2 Mal durchgeführt:
+  <table class="schedule">
+    <thead>
+    <th>Zeitslot</th><th colspan="6">Webinare</th>
+    </thead>
+    <tbody>
+    <tr><th>1</th><td>Hohberger</td><td>Richarz</td><td>Mayr</td><td>Keßler</td><td>Blauth</td><td>Sommerer</td></tr>
+    <tr><th>2</th><td>Hohberger</td><td>Klimpel</td><td>Mayr</td><td>Zanker-Belz</td><td>Blauth</td><td>Stritzker</td></tr>
+    <tr><th>3</th><td>Stritzker</td><td>Klimpel</td><td>Keßler</td><td>Zanker-Belz</td><td>Richarz</td><td>Sommerer</td></tr>
+    </tbody>
   </table>
 
   Um besser einschätzen zu können, welche Webinare stärker ausgelastet sind, möchten wir Sie
@@ -86,15 +91,34 @@ fields:
     datatype: checkboxes
     none of the above: false
     choices:
-      - Willkommen in der digitalen Welt – Musik-Apps in der Musikgeragogik Hohberger: hohberger
-      - Kommunikationspuppen im digitalen Einsatz ‐ Musikalische Betreuung von Menschen mit Demenz online: klimpel
-      - Rhythmik bringt durch Musik all(t)e Menschen in Bewegung!: mayr
-      - Musik auf Abstand und doch ganz nah ‐ Fenster‐ und Telefonkonzerte (Arbeitstitel): zankerbelz
-      - Meine ganz persönliche Musik ‐ Mehr Lebensqualität durch individualisierte Playlists: richarz
-      - Musiktherapeutische Singangebote über Musikvideos (USB‐ Singkreise): kessler
-      - Das Keyboard ‐ ein digitales Musikinstrument in der musiktherapeutischen Arbeit mit Menschen mit Demenz: sommerer
-      - Musikinterventionen für den Alltag häuslich pflegender Angehöriger mit ihren Menschen mit Demenz: blauth
-      - Titel noch offen, musiktherapeutisches Thema: stritzker
+      - "**Hohberger**: Willkommen in der digitalen Welt – Musik-Apps in der Musikgeragogik Hohberger": hohberger
+      - "**Klimpel**: Kommunikationspuppen im digitalen Einsatz ‐ Musikalische Betreuung von Menschen mit Demenz online": klimpel
+      - "**Mayr**: Rhythmik bringt durch Musik all(t)e Menschen in Bewegung!": mayr
+      - "**Zanker-Belz**: Musik auf Abstand und doch ganz nah ‐ Fenster‐ und Telefonkonzerte (Arbeitstitel)": zankerbelz
+      - "**Richarz**: Meine ganz persönliche Musik ‐ Mehr Lebensqualität durch individualisierte Playlists": richarz
+      - "**Keßler**: Musiktherapeutische Singangebote über Musikvideos (USB‐ Singkreise)": kessler
+      - "**Sommerer**: Das Keyboard ‐ ein digitales Musikinstrument in der musiktherapeutischen Arbeit mit Menschen mit Demenz": sommerer
+      - "**Blauth**: Musikinterventionen für den Alltag häuslich pflegender Angehöriger mit ihren Menschen mit Demenz": blauth
+      - "**Stritzker**: Titel noch offen, musiktherapeutisches Thema": stritzker
+css: |
+  <style>
+    table.schedule,
+    table.schedule th,
+    table.schedule td {
+        border: 1px solid gray;
+        border-collapse: collapse;
+        padding: 5px 2px;
+        text-align: center;
+    }
+    
+    table.schedule {
+      width: 100%;
+    }
+    
+    ul li {
+      margin-bottom: 5px;
+    }
+  </style>
 ---
 id: mud-2021/rechnung
 field: Rechnungs_Info
